--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico">
-    <title>CEOtarget</title>
+    <title>AdsTarget</title>
 </head>
 <body>
     
@@ -23,7 +23,7 @@
                         <a class="contact__btn contact__phone" href="tel:87014806780">+7 (701) 480 67 80</a>
                     </li>
                     <li>
-                        <a class="contact__btn contact__whatsapp" href="https://api.whatsapp.com/send?phone=77014806780&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5.%20%D0%AF%20%D0%BF%D0%B8%D1%88%D1%83%20%D0%92%D0%B0%D0%BC%20%D0%BF%D0%BE%20%D0%BF%D0%BE%D0%B2%D0%BE%D0%B4%D1%83%20CEO">Пишите в WhatsApp</a>
+                        <a class="contact__btn contact__whatsapp" href="https://api.whatsapp.com/send?phone=77014806780&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5,%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BD%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B8%D1%82%D1%8C%20%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D0%BD%D1%83%D1%8E%20%D0%BA%D0%B0%D0%BC%D0%BF%D0%B0%D0%BD%D0%B8%D1%8E">Пишите в WhatsApp</a>
                     </li>
                 </ul>
             </div>
