--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <h1 class="slider__content__text_title main">Контекстная реклама в Google и Яндекс под ключ</h1>
                                 <ul >
                                     <li class="slider__content__item contact__forecast">Без агентской комиссии</li>
-                                    <li class="slider__content__item contact__target">Единоразовая настройка - мгновенные конвертации</li>
+                                    <li class="slider__content__item contact__target">Единоразовая настройка - мгновенные конверсии</li>
                                     <li class="slider__content__item contact__tags">Самообучающаяся реклама</li>
                                 </ul>
                             </div>
@@ -94,7 +94,7 @@
                                     </li>
                                     <li class="col-md-6">
                                         <div class="slider__card">
-                                            <h4 class="slider__heading">Единоразовая настройка от <br/><span class="price">70 000 тг</span></h4>
+                                            <h4 class="slider__heading">Единоразовая настройка от <br/><span class="price">60 000 тг</span></h4>
                                             <ul>
                                                 <li class="slider__content__text_light contact__tick">До 100 ключевых слов</li>
                                                 <li class="slider__content__text_light contact__tick">Полный доступ к рекламному кабинету</li>
@@ -136,9 +136,8 @@
                                 <li class="fourth__col step3">
                                     <div>
                                         <h3 class="step__title3">Шаг самый классный</h3>
-                                        <p>Настройка рекламной кампании</p>
-                                        <p>Установка систем аналитики на сайт</p>
-                                        <p>Утверждение рекламной кампании и запуск</p>
+                                        <p>Утверждение рекламной кампании</p>
+                                        <p>Запуск рекламной кампании</p>
                                     </div>
                                 </li>
                             </ul>
