--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 </li>
                                 <li class="fourth__col step3">
                                     <div>
-                                        <h3 class="step__title3">Шаг самый классный</h3>
+                                        <h3 class="step__title3">Запуск</h3>
                                         <p>Утверждение рекламной кампании</p>
                                         <p>Запуск рекламной кампании</p>
                                     </div>
