--- a/index.html
+++ b/index.html
@@ -26,13 +26,31 @@
                 <a href="#" class="logo"></a>
                 <ul class="contact__list">
                     <li>
-                        <a class="contact__btn contact__telegram" href="https://t.me/adstarget">Пишите в Telegram</a>
+                        <a
+                                class="contact__btn contact__telegram"
+                                href="https://t.me/adstarget"
+                                onClick="gtag('event', 'click', {'event_category' : 'telegram'})"
+                        >
+                            Пишите в Telegram
+                        </a>
                     </li>
                     <li>
-                        <a class="contact__btn contact__phone" href="tel:87014806780">+7 (701) 480 67 80</a>
+                        <a
+                                class="contact__btn contact__phone"
+                                href="tel:87014806780"
+                                onClick="gtag('event', 'click', {'event_category' : 'zvonok'})"
+                        >
+                            +7 (701) 480 67 80
+                        </a>
                     </li>
                     <li>
-                        <a class="contact__btn contact__whatsapp" href="https://api.whatsapp.com/send?phone=77014806780&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5,%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BD%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B8%D1%82%D1%8C%20%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D0%BD%D1%83%D1%8E%20%D0%BA%D0%B0%D0%BC%D0%BF%D0%B0%D0%BD%D0%B8%D1%8E">Пишите в WhatsApp</a>
+                        <a
+                                class="contact__btn contact__whatsapp"
+                                href="https://api.whatsapp.com/send?phone=77014806780&text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5,%20%D1%85%D0%BE%D1%87%D1%83%20%D0%BD%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B8%D1%82%D1%8C%20%D1%80%D0%B5%D0%BA%D0%BB%D0%B0%D0%BC%D0%BD%D1%83%D1%8E%20%D0%BA%D0%B0%D0%BC%D0%BF%D0%B0%D0%BD%D0%B8%D1%8E"
+                                onClick="gtag('event', 'click', {'event_category' : 'whatsapp'})"
+                        >
+                            Пишите в WhatsApp
+                        </a>
                     </li>
                 </ul>
             </div>
