update telegram link

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li>
                         <a
                                 class="contact__btn contact__telegram"
-                                href="https://t.me/adstarget"
+                                href="https://t.me/galiyushh"
                                 onclick="gtag('event', 'click', {'event_category' : 'telegram'})"
                         >
                             Пишите в Telegram
